[package]
description = "Calculate CAGR and date difference"
name = "compounder"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "compounder"
# path = "src/main.rs"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["glow", "serde", "persistence"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde  = { version = "1.0.214" }
egui_extras = { version = "0.29.1", features = ["svg"] }

[build-dependencies]
winresource = "0.1.17"

[profile.dev]
# opt-level = 1

[profile.dev.package."*"]
# opt-level = 3
debug = false

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
