[package]
description = "Calculate CAGR and date difference"
name = "compounder"
authors = ["Roger Salomonsson <medicorab@gmail.com>"]
version = "1.0.0"
edition = "2021"

# [[bin]]
# name = "compounder"
# path = "src/main.rs"

[dependencies]
eframe = { version = "0.30.0", default-features = false, features = ["glow", "persistence"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde  = { version = "1.0.217" }
# egui_extras = { version = "0.29.1", features = ["svg"] }

[build-dependencies]
winresource = "0.1.19"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
